<resources>
    <string name="app_name">AIChat</string>

    <!--menu title-->
    <string name="title_home">首页</string>
    <string name="title_search">搜索</string>
    <string name="title_setting">设置</string>
    <string name="title_chats">聊天</string>

    <!--ChatFragment-->
    <string name="chat_card_transition_name">chat_card_%1$s</string>
    <string name="chat_detail_transition_name">chat_card_detail</string>

    <!--Description-->
    <string name="nav_open_drawer">打开侧边栏</string>
    <string name="nav_close_drawer">关闭侧边栏</string>
    <string name="nav_header_desc">头像</string>
    <string name="des_new_chats">开始聊天</string>
    <string name="des_send_message">发送消息</string>
    <string name="des_voice_input">语音输入</string>

    <!--text-->
    <string name="text_message_hint">消息</string>
    <string name="text_replace">替换</string>
    <string name="text_input">输入</string>
</resources>