<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.aking.aichat.ui.page.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_chat"
            app:destination="@id/navigation_chat"
            app:enterAnim="@anim/fragment_enter"
            app:exitAnim="@anim/fragment_exit"
            app:popEnterAnim="@anim/fragment_enter_pop"
            app:popExitAnim="@anim/fragment_exit_pop" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.aking.aichat.ui.page.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.aking.aichat.ui.page.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.aking.aichat.ui.page.ChatFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_chat">
        <argument
            android:name="conversation"
            app:argType="com.aking.aichat.database.entity.ConversationEntity" />
    </fragment>

    <action
        android:id="@+id/action_navigation_home_to_navigation_search"
        app:destination="@id/navigation_search"
        app:enterAnim="@anim/fragment_enter"
        app:exitAnim="@anim/fragment_exit"
        app:popEnterAnim="@anim/fragment_enter_pop"
        app:popExitAnim="@anim/fragment_exit_pop" />

</navigation>